src/objects/Open_Access_attendance__c.object
<CustomObject>
    <fields>
        <fullName>Advice_and_Support_given__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advice and Support given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADS_MMP_C__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CADS - Methadone Maintenance Programme/Counselling</inlineHelpText>
        <label>CADS - MMP/Counselling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Open_Door_attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_age__c</fullName>
        <formula>Client__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_gender__c</fullName>
        <formula>text(Client__r.X4_Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Detox_Programme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Detox Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complimentary_Therapies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complimentary Therapies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Computer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Computer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coolmine_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coolmine Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coolmine_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coolmine Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_client_entered__c</fullName>
        <label>Date and Time client entered</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_client_left__c</fullName>
        <label>Date and Time client left</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_since_last_activity__c</fullName>
        <label>Days since last activity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detox_Residential_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detox/Residential Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Induction_given__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should be given at third session</inlineHelpText>
        <label>Induction given (3rd session)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_worker_offered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fill in the key worker in the client record</inlineHelpText>
        <label>Key worker offered (6th session)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Literacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Literacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mullingar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MQI_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQI Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>None__c</fullName>
        <defaultValue>false</defaultValue>
        <label>None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_anything_left_at_reception__c</fullName>
        <label>Note anything left at reception</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nurse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nurse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nutrition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nutrition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_to_one_brief_intervention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One-to-one brief intervention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_reason__c</fullName>
        <label>Other reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_referral__c</fullName>
        <inlineHelpText>If other, please specify</inlineHelpText>
        <label>Other referral</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_call_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone call out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_entry_Dublin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-entry Dublin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_entry_Limerick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-entry Limerick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_entry_Mullingar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-entry Mullingar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Attending__c</fullName>
        <label>Reason for Attending</label>
        <picklist>
            <picklistValues>
                <fullName>Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relapse_prevention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relapse prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requests_from_client__c</fullName>
        <label>Requests from client</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SIMON_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIMON Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_notes__c</fullName>
        <label>Session notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Showers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Showers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Welfare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Welfare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>St_Marthas_Longford__c</fullName>
        <defaultValue>false</defaultValue>
        <label>St Marthas Longford</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stabilisation_Detox_Limerick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stabilisation/Detox Limerick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stabilisation_Detox_Mullingar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stabilisation/Detox Mullingar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stepping_Out_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stepping Out Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspect_client_is_under_18__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will send an email to someone</inlineHelpText>
        <label>Suspect client is under 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFE_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TFE Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_did_induction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Who did induction</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Access attendances (Who did induction)</relationshipLabel>
        <relationshipName>Open_Access_attendances_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <label>Open Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_and_Time_client_entered__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Attendance_today_in_Dublin</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_and_Time_client_entered__c</columns>
        <columns>Date_and_Time_client_left__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_and_Time_client_entered__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>Dublin</value>
        </filters>
        <label>Attendance today in Dublin</label>
    </listViews>
    <listViews>
        <fullName>Attendance_today_in_Limerick</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_and_Time_client_entered__c</columns>
        <columns>Date_and_Time_client_left__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_and_Time_client_entered__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>Limerick</value>
        </filters>
        <label>Attendance today in Limerick</label>
    </listViews>
    <listViews>
        <fullName>Attendance_today_in_Mullingar</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_and_Time_client_entered__c</columns>
        <columns>Date_and_Time_client_left__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_and_Time_client_entered__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>Mullingar</value>
        </filters>
        <label>Attendance today in Mullingar</label>
    </listViews>
    <listViews>
        <fullName>Currently_in_Dublin_centre</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_and_Time_client_entered__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_and_Time_client_entered__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>Dublin</value>
        </filters>
        <filters>
            <field>Date_and_Time_client_left__c</field>
            <operation>equals</operation>
        </filters>
        <label>Currently in Dublin centre</label>
    </listViews>
    <listViews>
        <fullName>Currently_in_Limerick_centre</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_and_Time_client_entered__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_and_Time_client_entered__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>Limerick</value>
        </filters>
        <filters>
            <field>Date_and_Time_client_left__c</field>
            <operation>equals</operation>
        </filters>
        <label>Currently in Limerick centre</label>
    </listViews>
    <listViews>
        <fullName>Currently_in_Mullingar_centre</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_and_Time_client_entered__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_and_Time_client_entered__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>Mullingar</value>
        </filters>
        <filters>
            <field>Date_and_Time_client_left__c</field>
            <operation>equals</operation>
        </filters>
        <label>Currently in Mullingar centre</label>
    </listViews>
    <nameField>
        <displayFormat>OAA-{mm}{yy}-{00}</displayFormat>
        <label>Open Access attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>At_least_one_referral_out</fullName>
        <active>true</active>
        <description>One of the referral out options must be ticked</description>
        <errorConditionFormula>AND( NOT( None__c ) , NOT( Community_Detox_Programme__c ),not( Detox_Residential_Setting__c),not( Community_GP__c),not( CADS_MMP_C__c),not( Stepping_Out_Project__c ),not( SIMON_Community__c),not( Complimentary_Therapies__c),not( VEC__c ),not( Social_Welfare__c ),not( TFE_Project__c ),not( Housing_Officer__c ),not( St_Marthas_Longford__c ),not( MQI_Service__c ),isblank(Other_referral__c))</errorConditionFormula>
        <errorDisplayField>None__c</errorDisplayField>
        <errorMessage>At least one of the referral out options must be checked, if no referrals out in this session, then tick &quot;None&quot;</errorMessage>
    </validationRules>
</CustomObject>